<resources>
    <string name="app_name">Transmission</string>
    <string name="messages_notification_channel_id">messages-channel</string>
    <string name="messages_notification_channel_name">Messages</string>
    <string name="messages_notification_channel_description">All the messages will go through this channel</string>
    <string name="persistent_notification_channel_id">persistent-channel</string>
    <string name="persistent_notification_channel_name">Persistent Notification</string>
    <string name="persistent_notification_channel_description">The persistent notification will go here</string>
    <string name="persistent_notification_stop">Stop</string>
    <string name="persistent_notification_no_radio">No radio connected.</string>
    <string name="persistent_notification_radios">%d radio(s) connected.</string>
    <string name="persistent_notification_device_not_compatible">The USB device provided isn\'t compatible or isn\'t working correctly.</string>
    <string name="persistent_notification_device_not_working">The USB device provided isn\'t working correctly.</string>
    <string name="reply_label">Reply</string>
    <string name="persistent_notification_title">Transmission is running</string>
    <string name="message_notifications_user_name">You</string>

    <string name="action_settings">Settings</string>
    <string name="action_toggle_radio_0">Toggle radio 0</string>
    <string name="action_toggle_radio_1">Toggle radio 1</string>
    <string name="action_toggle_radio_2">Toggle radio 2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Transmission</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_settings">Settings</string>

    <string name="edit_message_hint">Transmission message</string>
    <string name="chat_id_intent_extra">chat_id</string>
    <string name="chat_new_placeholder_message">New conversation</string>

    <!-- Preferences -->
    <string name="settings_main_category_label">Transmission settings</string>
    <string name="settings_main_category_id">main_category</string>

    <!-- Radio -->
    <string name="settings_category_radio">Radio</string>
    <string name="settings_category_radio_id">radio_fragment_button</string>

    <string name="settings_category_radio0_name">Radio 0</string>
    <string name="settings_category_radio1_name">Radio 1</string>
    <string name="settings_category_radio2_name">Radio 2</string>
    <string name="settings_category_radio0_disconnected_name">Radio 0 (Not connected)</string>
    <string name="settings_category_radio1_disconnected_name">Radio 1 (Not connected)</string>
    <string name="settings_category_radio2_disconnected_name">Radio 2 (Not connected)</string>
    <string name="settings_category_radio0_id">radio0_category</string>
    <string name="settings_category_radio1_id">radio1_category</string>
    <string name="settings_category_radio2_id">radio2_category</string>

    <string name="settings_enabled_label">Enabled</string>
    <string name="settings_radio0_enabled_id">radio0_enabled</string>
    <string name="settings_radio1_enabled_id">radio1_enabled</string>
    <string name="settings_radio2_enabled_id">radio2_enabled</string>

    <string name="settings_frequency_label">Frequency (MHz)</string>
    <string name="settings_radio0_frequency_id">radio0_frequency</string>
    <string name="settings_radio1_frequency_id">radio1_frequency</string>
    <string name="settings_radio2_frequency_id">radio2_frequency</string>

    <string name="settings_tx_power_label">Transmit Power (dBm)</string>
    <string name="settings_tx_power_summary">A higher value means higher transmission range, but it increases power consumption.</string>
    <string name="settings_radio0_tx_power_id">radio0_tx_power</string>
    <string name="settings_radio1_tx_power_id">radio1_tx_power</string>
    <string name="settings_radio2_tx_power_id">radio2_tx_power</string>

    <string name="settings_lna_gain_label">LNA Gain</string>
    <string name="settings_lna_gain_summary">The RX Gain. Set to 0 for AGC (Automatic Gain Control)</string>
    <string name="settings_radio0_lna_gain_id">radio0_lna_gain</string>
    <string name="settings_radio1_lna_gain_id">radio1_lna_gain</string>
    <string name="settings_radio2_lna_gain_id">radio2_lna_gain</string>

    <string name="settings_spreading_factor_label">Spreading Factor</string>
    <string name="settings_spreading_factor_summary">A higher value means higher reception quality, but also lower transmission speed.</string>
    <string name="settings_radio0_spreading_factor_id">radio0_spreading_factor</string>
    <string name="settings_radio1_spreading_factor_id">radio1_spreading_factor</string>
    <string name="settings_radio2_spreading_factor_id">radio2_spreading_factor</string>

    <string name="settings_category_reset_radio">Reset</string>
    <string name="settings_reset_radio_button_label">Reset all radio settings to defaults</string>
    <string name="settings_reset_radio_button_summary">Resets all radio settings to the app defaults</string>
    <string name="settings_reset_radio_button_id">reset_all_radio_settings_button</string>
    <string name="settings_reset_radio_dialog_title">Reset all radio settings to app defaults?</string>
    <string name="settings_reset_radio_dialog_message">This action cannot be reverted!</string>
    <string name="settings_reset_radio_dialog_cancel_text">Cancel</string>
    <string name="settings_reset_radio_dialog_reset_text">Reset</string>

    <!-- Messages -->
    <string name="settings_category_messages">Messages</string>
    <string name="settings_category_messages_id">messages_fragment_button</string>

    <string name="settings_name_label">Name</string>
    <string name="settings_name_summary">The name that will be displayed to other users when you make a new conversation.\nNote: changing it does not apply it to other users after starting a conversation.</string>
    <string name="settings_name_id">settings_name</string>

    <string name="settings_text_auto_trim_label">Trim messages on send</string>
    <string name="settings_text_auto_trim_summary">Removes trailing and heading spaces and other control/invisible characters when sending a message</string>
    <string name="settings_text_auto_trim_id">text_auto_trim_switch</string>

    <!-- Advanced -->
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_advanced_id">advanced_fragment_button</string>
    <string name="settings_category_processing">Processing</string>

    <string name="settings_packet_compression_level_label">Packet compression level</string>
    <string name="settings_packet_compression_level_summary">Increasing this may give more throughput, but it may also heavily increase memory, CPU and battery usage. A good balance can improve speed and battery life.</string>
    <string name="settings_packet_compression_level_id">packet_compression_level_bar</string>

    <string name="settings_reset_advanced_button_label">Reset all advanced settings to defaults</string>
    <string name="settings_reset_advanced_button_summary">Resets all advanced settings to the app defaults</string>
    <string name="settings_reset_advanced_button_id">reset_all_advanced_settings_button</string>
    <string name="settings_reset_advanced_dialog_title">Reset all advanced settings to app defaults?</string>
    <string name="settings_reset_advanced_dialog_message">This action cannot be reverted!</string>
    <string name="settings_reset_advanced_dialog_cancel_text">Cancel</string>
    <string name="settings_reset_advanced_dialog_reset_text">Reset</string>

    <!-- Credits -->
    <string name="settings_credits_category_label">Credits</string>
    <string name="settings_credits_category_id">credits_category</string>

    <!-- Version -->
    <string name="settings_version_label">Transmission v1.0.0</string>
    <string name="settings_version_summary">by Lena with &lt;3</string>
    <string name="settings_version_id">version_button</string>
    <string name="settings_version_easter_egg_text">\ud83c\udff3\ufe0f\u200d\ud83c\udf08\ud83c\udff3\ufe0f\u200d\u26a7\ufe0f\ud83c\udff4\u200d\u2620\ufe0f</string>

    <!-- Repository -->

    <string name="settings_repository_label">Repository</string>
    <string name="settings_repository_summary">Click to open the GitHub repository</string>
    <string name="settings_repository_id">repository_button</string>
    <string name="settings_repository_url">https://github.com/adryzz/Transmission</string>

    <!-- New Conversation -->
    <string name="qr_code_scan_button_label">Scan Conversation QR code</string>
    <string name="qr_code_generate_button_label">Generate Conversation QR code</string>
</resources>