<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_radio0_disconnected_name"
        android:key="@string/settings_category_radio0_id"
        android:enabled="false">

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/settings_radio0_enabled_id"
            app:title="@string/settings_enabled_label" />

        <EditTextPreference
            app:key="@string/settings_radio0_frequency_id"
            app:title="@string/settings_frequency_label"
            app:dependency="@string/settings_radio0_enabled_id"
            app:useSimpleSummaryProvider="false" />

        <SeekBarPreference
            android:max="20"
            app:dependency="@string/settings_radio0_enabled_id"
            app:defaultValue="17"
            app:key="@string/settings_radio0_tx_power_id"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_tx_power_summary"
            app:title="@string/settings_tx_power_label" />

        <SeekBarPreference
            android:max="12"
            app:dependency="@string/settings_radio0_enabled_id"
            app:defaultValue="7"
            app:key="@string/settings_radio0_spreading_factor_id"
            app:min="6"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_spreading_factor_summary"
            app:title="@string/settings_spreading_factor_label" />

        <SeekBarPreference
            android:max="6"
            app:dependency="@string/settings_radio0_enabled_id"
            app:defaultValue="0"
            app:key="@string/settings_radio0_lna_gain_id"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_lna_gain_summary"
            app:title="@string/settings_lna_gain_label" />

        <!-- Signal Bandwidth -->
        <!-- Coding Rate -->
        <!-- Preamble Length -->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_radio1_disconnected_name"
        android:key="@string/settings_category_radio1_id"
        android:enabled="false">

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/settings_radio1_enabled_id"
            app:title="@string/settings_enabled_label" />

        <EditTextPreference
            app:key="@string/settings_radio1_frequency_id"
            app:title="@string/settings_frequency_label"
            app:dependency="@string/settings_radio1_enabled_id"
            app:useSimpleSummaryProvider="false" />

        <SeekBarPreference
            android:max="20"
            app:dependency="@string/settings_radio1_enabled_id"
            app:defaultValue="17"
            app:key="@string/settings_radio1_tx_power_id"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_tx_power_summary"
            app:title="@string/settings_tx_power_label" />

        <SeekBarPreference
            android:max="12"
            app:dependency="@string/settings_radio1_enabled_id"
            app:defaultValue="7"
            app:key="@string/settings_radio1_spreading_factor_id"
            app:min="6"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_spreading_factor_summary"
            app:title="@string/settings_spreading_factor_label" />

        <SeekBarPreference
            android:max="6"
            app:dependency="@string/settings_radio1_enabled_id"
            app:defaultValue="0"
            app:key="@string/settings_radio1_lna_gain_id"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_lna_gain_summary"
            app:title="@string/settings_lna_gain_label" />

        <!-- Signal Bandwidth -->
        <!-- Coding Rate -->
        <!-- Preamble Length -->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_radio2_disconnected_name"
        android:key="@string/settings_category_radio2_id"
        android:enabled="false">

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/settings_radio2_enabled_id"
            app:title="@string/settings_enabled_label" />

        <EditTextPreference
            app:key="@string/settings_radio2_frequency_id"
            app:title="@string/settings_frequency_label"
            app:dependency="@string/settings_radio2_enabled_id"
            app:useSimpleSummaryProvider="false" />

        <SeekBarPreference
            android:max="20"
            app:dependency="@string/settings_radio2_enabled_id"
            app:defaultValue="17"
            app:key="@string/settings_radio2_tx_power_id"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_tx_power_summary"
            app:title="@string/settings_tx_power_label" />

        <SeekBarPreference
            android:max="12"
            app:dependency="@string/settings_radio2_enabled_id"
            app:defaultValue="7"
            app:key="@string/settings_radio2_spreading_factor_id"
            app:min="6"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_spreading_factor_summary"
            app:title="@string/settings_spreading_factor_label" />

        <SeekBarPreference
            android:max="6"
            app:dependency="@string/settings_radio2_enabled_id"
            app:defaultValue="0"
            app:key="@string/settings_radio2_lna_gain_id"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_lna_gain_summary"
            app:title="@string/settings_lna_gain_label" />

        <!-- Signal Bandwidth -->
        <!-- Coding Rate -->
        <!-- Preamble Length -->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_reset_radio">
        <Preference
            android:title="@string/settings_reset_radio_button_label"
            android:key="@string/settings_reset_radio_button_id"
            android:summary="@string/settings_reset_radio_button_summary"/>
    </PreferenceCategory>
</PreferenceScreen>