<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_processing">
        <SeekBarPreference
            android:max="22"
            app:defaultValue="3"
            app:key="@string/settings_packet_compression_level_id"
            app:min="-5"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_packet_compression_level_summary"
            app:title="@string/settings_packet_compression_level_label" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_reset_radio">
    <Preference
        android:title="@string/settings_reset_advanced_button_label"
        android:key="@string/settings_reset_advanced_button_id"
        android:summary="@string/settings_reset_advanced_button_summary"/>
    </PreferenceCategory>
</PreferenceScreen>