<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_radio0_name">

        <SwitchPreference
            app:defaultValue="true"
            app:key="radio0_enabled"
            app:title="@string/settings_enabled_label" />

        <EditTextPreference
            app:key="radio0_frequency"
            app:title="@string/settings_frequency_label"
            app:dependency="radio0_enabled"
            app:useSimpleSummaryProvider="false" />

        <SeekBarPreference
            android:max="17"
            app:dependency="radio0_enabled"
            app:defaultValue="17"
            app:key="radio0_tx_power"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_tx_power_summary"
            app:title="@string/settings_tx_power_label" />

        <SeekBarPreference
            android:max="7"
            app:dependency="radio0_enabled"
            app:defaultValue="7"
            app:key="radio0_spreading_factor"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_spreading_factor_summary"
            app:title="@string/settings_spreading_factor_label" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_radio1_name">

        <SwitchPreference
            app:key="radio1_enabled"
            app:title="@string/settings_enabled_label"
            app:defaultValue="true"/>

        <EditTextPreference
            app:key="radio1_frequency"
            app:title="@string/settings_frequency_label"
            app:dependency="radio1_enabled"
            app:useSimpleSummaryProvider="false" />

        <SeekBarPreference
            android:max="17"
            app:defaultValue="17"
            app:key="radio1_tx_power"
            app:dependency="radio1_enabled"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_tx_power_summary"
            app:title="@string/settings_tx_power_label" />

        <SeekBarPreference
            android:max="7"
            app:dependency="radio1_enabled"
            app:defaultValue="7"
            app:key="radio1_spreading_factor"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_spreading_factor_summary"
            app:title="@string/settings_spreading_factor_label" />

    </PreferenceCategory>

    <PreferenceCategory
        app:enabled="false"
        app:title="@string/settings_category_radio2_disconnected_name">

        <SwitchPreference
            app:defaultValue="true"
            app:key="radio2_enabled"
            app:title="@string/settings_enabled_label" />

        <EditTextPreference
            app:key="radio2_frequency"
            app:title="@string/settings_frequency_label"
            app:dependency="radio2_enabled"
            app:useSimpleSummaryProvider="false" />

        <SeekBarPreference
            android:max="17"
            app:defaultValue="17"
            app:key="radio2_tx_power"
            app:dependency="radio2_enabled"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_tx_power_summary"
            app:title="@string/settings_tx_power_label" />

        <SeekBarPreference
            android:max="7"
            app:defaultValue="7"
            app:dependency="radio2_enabled"
            app:key="radio2_spreading_factor"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_spreading_factor_summary"
            app:title="@string/settings_spreading_factor_label" />

    </PreferenceCategory>

</PreferenceScreen>