<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="place.lena.transmission.com.lena.transmission.MainActivity">
    <item

        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_antenna0_toggle"
        android:visible="false"
        android:icon="@drawable/round_sensors_off_24"
        android:menuCategory="container"
        android:orderInCategory="200"
        android:title="@string/action_toggle_radio_0"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_antenna1_toggle"
        android:visible="false"
        android:icon="@drawable/round_sensors_off_24"
        android:menuCategory="container"
        android:orderInCategory="300"
        android:title="@string/action_toggle_radio_1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_antenna2_toggle"
        android:visible="false"
        android:icon="@drawable/round_sensors_off_24"
        android:menuCategory="container"
        android:orderInCategory="400"
        android:title="@string/action_toggle_radio_2"
        app:showAsAction="ifRoom" />
</menu>